# FLP

./: README.md  case.blend  untitled.blend
.metadata/: version.ini
FLP_PCB/FLP_PCB_host/: FLP_PCB_host-B_Mask.gbr  FLP_PCB_host-F_Cu.gbr  FLP_PCB_host-F_Paste.gbr  FLP_PCB_host-NPTH.drl  FLP_PCB_host.csv  FLP_PCB_host.kicad_pcb  FLP_PCB_host.kicad_prl  FLP_PCB_host.kicad_pro  FLP_PCB_host.kicad_sch  fp-info-cache
FLP_PCB/FLP_PCB_terminal/: FLP_PCB_terminal-B_Cu.gbr  FLP_PCB_terminal-B_Mask.gbr  FLP_PCB_terminal-B_Paste.gbr  FLP_PCB_terminal-B_Silkscreen.gbr  FLP_PCB_terminal-Edge_Cuts.gbr  FLP_PCB_terminal-F_Cu.gbr  FLP_PCB_terminal-F_Mask.gbr  FLP_PCB_terminal-F_Paste.gbr  FLP_PCB_terminal-F_Silkscreen.gbr  FLP_PCB_terminal-In1_Cu.gbr  FLP_PCB_terminal-In2_Cu.gbr  FLP_PCB_terminal-NPTH.drl  FLP_PCB_terminal-PTH.drl  FLP_PCB_terminal-front-in1.drl  FLP_PCB_terminal-front-in2.drl  FLP_PCB_terminal-job.gbrjob  FLP_PCB_terminal.csv  FLP_PCB_terminal.kicad_pcb  (+6 more)
FLP_code/: tool_set_config.json
FLP_device_code/: tool_set_config.json
FLP_device_code/FLP_host/components/web_server/: CMakeLists.txt  web_server.c
FLP_device_code/FLP_host/components/web_server/include/: web_server.h
FLP_device_code/FLP_host/components/websocket_client/: CMakeLists.txt  websocket_client.c
FLP_device_code/FLP_host/components/websocket_client/include/: websocket_client.h
FLP_device_code/FLP_host/main/: .cproject  CMakeLists.txt  main.c
mistance_PCB/: #auto_saved_files#  fp-info-cache  mistance_PCB.kicad_pcb  mistance_PCB.kicad_prl  mistance_PCB.kicad_pro  mistance_PCB.kicad_sch
temp_web/: FLP.html
(+134 files in other folders)
